- onenetd 1.12

Tidy up the documentation: remove duplicate copyright notices, and merge
the ChangeLog and NEWS files together.

Make onenetd work on platforms like ARM where char is unsigned.

- onenetd 1.11

Change the license from the GPL to the Expat license.

Use getsockname() to get the local address to put in TCPLOCALIP, rather
than just using the listen address; this means that TCPLOCALIP will be
set to the address of the interface the client connected to.

Document the environment variables. Reported by Tim Bishop.

Check that accept() returned a valid address.

Catch a (harmless) out-of-memory crash while parsing options.  Reported
by Ulf Härnhammar, who also did a security review of the code -- thanks!

Update the list of connected clients correctly; previously
clients weren't being added to the list at all, so memory would be
leaked if the refusal message wasn't accepted immediately, and the child
FD would be closed immediately anyway. Avoid overfilling fd_sets by
dropping client connections if they wouldn't fit.

- onenetd 1.10

Set fd options correctly (required for Solaris).

Block SIGCHLD except while select() is running.

Use a self-pipe again, since the other way is not correct (it leaves
zombies if the handler gets called early enough).

Use FD_CLOEXEC to avoid leaking fds.

Various cleanups.

- onenetd 1.9

Made all the errors that can occur in the main loop non-fatal.

- onenetd 1.8

Added -e to redirect stderr of child to socket.

Removed obsolete -o and -d from getopt args.

Wrote manual page.

- onenetd 1.7

Fixed bug where onenetd wouldn't accept any connections after it had
been full -- it was calculating "full" in the wrong place.

Made the disconnect message show the connection count after
disconnection, which makes it easier to see how many clients are
actually connected from the log.

- onenetd 1.6

Avoid selecting on the listening socket when full.

Split out the "send response" code, so that we can call it when we first